--- a/accounts/templates/accounts/activation/account_activation_resend_done.html
+++ b/accounts/templates/accounts/activation/account_activation_resend_done.html
@@ -17,7 +17,7 @@
 <style>
     .container {
         background-color: #EEEEEE;
-        color: #161A1D;
+        color: #150E41;
         padding: 2vh 2vh;
         width: 40vw;
         margin-left: 30vw;
@@ -33,12 +33,22 @@
     }
 
     .container .mdl-button {
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
+        color: #fff !important;
+        background-color: #0471ff !important;
+        border-radius: 15px;
+        font-weight: bold;
     }
 
     .button-container {
         text-align: center;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 80vw;
+            margin: auto;
+            margin-top: 5vh;
+        }
     }
 </style>
 {% endblock %}
