--- a/brand/templates/brand/edit_active_locations.html
+++ b/brand/templates/brand/edit_active_locations.html
@@ -80,5 +80,15 @@
         color: #515151;
         margin-right: 1vw;
     }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 80vw;
+        }
+
+        .header {
+            line-height: 4vh;
+        }
+    }
 </style>
 {% endblock %}
