--- a/brand/templates/brand/qr_code.html
+++ b/brand/templates/brand/qr_code.html
@@ -3,7 +3,7 @@
 {% load qr_code %}
 <div class="container">
     <div class="heading">QR Code</div>
-    {% qr_from_text brand_id size="H" %}
+    {% qr_from_text brand_id size="L" %}
 </div>
 <style>
     .container {
