--- a/influencer/templates/influencer/post.html
+++ b/influencer/templates/influencer/post.html
@@ -214,7 +214,7 @@
 
     .heading {
         padding-top: 5vh;
-        font-size: 2em;
+        font-size: 25px;
         font-family: 'Montserrat', sans-serif;
     }
 
@@ -231,7 +231,7 @@
 
     .sub-heading {
         margin-bottom: 2vh;
-        font-size: 2em;
+        font-size: 25px;
         line-height: 1;
         font-family: 'Montserrat', sans-serif;
         text-align: left;
@@ -274,7 +274,7 @@
     .steps-grid .mdl-cell--11-col {
         display: flex;
         align-items: center;
-        font-size: 2em;
+        font-size: 20px;
         line-height: 1;
     }
 
