--- a/influencer/templates/influencer/profile_analytics.html
+++ b/influencer/templates/influencer/profile_analytics.html
@@ -353,6 +353,7 @@
         box-shadow: 0 6px 6px -5px #777;
         padding-top: 2vh;
         padding-left: 1vw;
+        height: fit-content;
     }
 
     .mdl-tabs__panel {
@@ -403,6 +404,7 @@
     .cities-grid>.mdl-cell {
         margin: auto;
         padding-bottom: 2vh;
+        font-size: 25px;
         font-family: 'Montserrat', sans-serif;
     }
 
