--- a/influencer/templates/influencer/profile_badge.html
+++ b/influencer/templates/influencer/profile_badge.html
@@ -221,6 +221,7 @@
         box-shadow: 0 6px 6px -5px #777;
         padding-top: 2vh;
         padding-left: 1vw;
+        height: fit-content;
     }
 
     .mdl-tabs__panel {
