--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -276,8 +276,8 @@
     }
 
     #login-panel {
-        padding: 5vh 5vw;
-        padding-top: 2vh;
+        padding: 20px 20px;
+        padding-top: 10px;
     }
 
     .mobile-header {
