--- a/brand/templates/brand/profile.html
+++ b/brand/templates/brand/profile.html
@@ -366,6 +366,7 @@
         box-shadow: 0 6px 6px -5px #777;
         padding-top: 2vh;
         padding-left: 1vw;
+        height: fit-content;
     }
 
     .mdl-tabs__panel {
@@ -455,7 +456,7 @@
     }
 
     .post-container {
-        font-size: 1.5em;
+        font-size: 18px;
         font-weight: 300;
     }
 
@@ -510,7 +511,7 @@
     }
 
     .brand-name {
-        font-size: 2em;
+        font-size: 30px;
         font-weight: 300;
         color: #150E41;
         font-family: 'Montserrat', sans-serif;
@@ -584,7 +585,7 @@
 
     .stat-heading {
         justify-content: center;
-        font-size: 1.5em;
+        font-size: 20px;
         font-weight: 300;
         margin-top: 4vh;
         font-family: 'Montserrat', sans-serif;
@@ -592,7 +593,7 @@
 
     .stat-number {
         justify-content: center;
-        font-size: 3em;
+        font-size: 40px;
         margin-bottom: 5vh;
         font-weight: 300;
         font-family: 'Montserrat', sans-serif;
