--- a/influencer/templates/influencer/facebook_connect.html
+++ b/influencer/templates/influencer/facebook_connect.html
@@ -43,11 +43,12 @@
         background-color: #fff;
         color: #161A1D;
         padding: 2vh 2vh;
-        width: 40vw;
-        margin-left: 30vw;
+        width: 66vw;
+        margin-left: 17vw;
         border-radius: 5px;
         font-size: 1.5em;
         margin-top: 10vh;
+        margin-bottom: 15px;
     }
 
     ol,
@@ -76,7 +77,6 @@
         text-align: center;
         border-radius: 10px;
         text-transform: none;
-        font-size: 2.5vh;
         width: 100%;
         margin-top: 15px;
         margin-bottom: 15px;
