--- a/influencer/templates/influencer/profile_endorsements.html
+++ b/influencer/templates/influencer/profile_endorsements.html
@@ -340,6 +340,7 @@
         box-shadow: 0 6px 6px -5px #777;
         padding-top: 2vh;
         padding-left: 1vw;
+        height: fit-content;
     }
 
     .mdl-tabs__panel {
@@ -436,7 +437,7 @@
     }
 
     .post-container {
-        font-size: 1.5em;
+        font-size: 18px;
         font-weight: 300;
     }
 
@@ -470,7 +471,7 @@
     }
 
     .brand-name {
-        font-size: 2em;
+        font-size: 30px;
         font-weight: 300;
         color: #150E41;
         font-family: 'Montserrat', sans-serif;
@@ -573,13 +574,13 @@
 
     .stat-heading {
         justify-content: center;
-        font-size: 1.5em;
+        font-size: 20px;
         font-weight: 300;
     }
 
     .stat-number {
         justify-content: center;
-        font-size: 3em;
+        font-size: 40px;
         margin-bottom: 5vh;
         font-weight: 300;
     }
