Add subheading to mobile site.

--- a/accounts/templates/noauth/landing.html
+++ b/accounts/templates/noauth/landing.html
@@ -842,13 +842,18 @@
         }
 
         .landing-subheading {
-            display: none;
+            font-size: 15px;
+            line-height: 15px;
+            margin-top: 10px;
+            text-align: center;
+            padding-left: 15px;
+            padding-right: 15px;
         }
 
         .landing-wrapper {
             width: 100%;
             padding-left: 0;
-            padding-top: 3vh;
+            padding-top: 5px;
         }
 
         .signup-buttons {
@@ -870,7 +875,7 @@
         .landing-graphic {
             width: 100vw;
             position: unset;
-            margin-top: 7vh;
+            margin-top: 25px;
         }
 
         .mobile-header {
