Add guidelines field for brand.

--- a/accounts/templates/accounts/brand_registration.html
+++ b/accounts/templates/accounts/brand_registration.html
@@ -92,6 +92,11 @@
         font-weight: bold;
     }
 
+    textarea#id_guidelines {
+        resize: none;
+        width: 97%;
+    }
+
     .errorlist {
         background-color: #DD2C00;
         border-radius: 5px;
