--- a/accounts/templates/accounts/complete_registration/complete_brand_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_brand_reg.html
@@ -65,6 +65,11 @@
         width: 100%;
     }
 
+    textarea#id_guidelines {
+        resize: none;
+        width: 97%;
+    }
+
     .errorlist {
         background-color: #DD2C00;
         border-radius: 5px;
