--- a/accounts/templates/accounts/account_change/settings.html
+++ b/accounts/templates/accounts/account_change/settings.html
@@ -126,6 +126,11 @@
         margin-bottom: 3vh !important;
     }
 
+    textarea#id_guidelines {
+        resize: none;
+        width: 97%;
+    }
+
     @media only screen and (max-width: 900px) {
         .container {
             width: 85%;
