--- a/brand/templates/brand/campaign.html
+++ b/brand/templates/brand/campaign.html
@@ -122,7 +122,7 @@
     <div class="header">
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--7-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone ">
-                Action Locations
+                Active Locations
             </div>
             <div class="mdl-cell mdl-cell--5-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone ">
                 <div class="edit-btn-wrapper">
@@ -143,9 +143,9 @@
             </div>
             <div class="mdl-cell mdl-cell--1-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone">
                 {% if location.active %}
-                <i class="material-icons toggle-on">toggle_on</i>
+                <i class="material-icons toggle-on">check_circle_outline</i>
                 {% else %}
-                <i class="material-icons toggle-off">toggle_off</i>
+                <i class="material-icons toggle-off">clear</i>
                 {% endif %}
             </div>
             {% if not forloop.last %}
@@ -369,11 +369,11 @@
     }
 
     i.toggle-on {
-        color: #0471ff;
+        color: #4caf50;
     }
 
     i.toggle-off {
-        color: #9e9e9e;
+        color: #f44336;
     }
 
     .profile-picture-display {
